--- a/Unit31_Node/Node/my_project/package.json
+++ b/Unit31_Node/Node/my_project/package.json
@@ -4,7 +4,7 @@
   "description": "31.4",
   "main": "firstNodeFile.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "Alan",
   "license": "ISC",
