--- a/Unit24_InterFlask/Unit 24.1/flask-wtforms-demo/requirements.txt
+++ b/Unit24_InterFlask/Unit 24.1/flask-wtforms-demo/requirements.txt
@@ -1,7 +1,22 @@
-Flask
-Flask-DebugToolbar
-Flask-SQLAlchemy
-Flask-WTF
-psycopg2-binary
-SQLAlchemy
-WTForms
+bcrypt==3.2.0
+blinker==1.4
+cffi==1.15.0
+click==8.0.4
+dnspython==2.2.0
+email-validator==1.1.3
+Flask==2.0.3
+Flask-Bcrypt==0.7.1
+Flask-DebugToolbar==0.11.0
+Flask-SQLAlchemy==2.5.1
+Flask-WTF==1.0.0
+greenlet==1.1.2
+idna==3.3
+itsdangerous==2.1.0
+Jinja2==3.0.3
+MarkupSafe==2.1.0
+psycopg2-binary==2.9.3
+pycparser==2.21
+six==1.16.0
+SQLAlchemy==1.4.31
+Werkzeug==2.0.3
+WTForms==3.0.1
