--- a/Unit35_Express_Postgres/express-biztime/package.json
+++ b/Unit35_Express_Postgres/express-biztime/package.json
@@ -2,7 +2,8 @@
   "dependencies": {
     "express": "^4.18.1",
     "pg": "^8.7.3",
-    "slugify": "^1.6.5"
+    "slugify": "^1.6.5",
+    "supertest": "^6.2.3"
   },
   "scripts": {
     "start": "node server.js"
