completed trees exercises

--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,6 @@ venv/
 __pycache__
 .vscode
 node_modules
-Unit24_InterFlask/
+Unit24_InterFlask/Unit47_DS_A/dsa-recursion-demo/
+Unit47_DS_A/dsa-recursion-demo/
+Unit47_DS_A/dsa-hash-tables-demo/
